This fixes bug #851 - GLTeapot unlocks the window before indirectly calling BWindow::UpdateIfNeeded(); BPopUpMenu::Go() should be independent of this.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18946 a95241bf-73f2-0310-859d-f6bbb57e9c96